<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_meeting_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.AddMeetingActivity">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="androidx.support.design.widget.AppBarLayout$ScrollingViewBehavior" >

         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/main_margin_horizontal"
                android:layout_marginVertical="@dimen/inter_margin_vertical"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/fragment_subText_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/choose_room_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_margin_vertical"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="@id/name_textInputLayout"
                app:layout_constraintStart_toStartOf="@id/name_textInputLayout"
                app:layout_constraintTop_toBottomOf="@id/name_textInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/choose_room_autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/room"
                    android:inputType="none"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/fragment_subText_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/time_picker_textButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_margin_vertical"
                android:text="@string/time_define"
                android:textColor="@color/white"
                android:textSize="@dimen/fragment_subText_size"
                app:layout_constraintEnd_toStartOf="@id/date_picker_textButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/choose_room_textInputLayout" />

            <Button
                android:id="@+id/date_picker_textButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_margin_vertical"
                android:text="@string/date_define"
                android:textColor="@color/white"
                android:textSize="@dimen/fragment_subText_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/time_picker_textButton"
                app:layout_constraintTop_toBottomOf="@id/choose_room_textInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_participant_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/inter_margin_horizontal"
                android:layout_marginTop="@dimen/inter_margin_vertical"
                android:hint="@string/addparticipant"
                app:layout_constraintEnd_toStartOf="@id/add_participant_btn"
                app:layout_constraintStart_toStartOf="@id/name_textInputLayout"
                app:layout_constraintTop_toBottomOf="@id/time_picker_textButton">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_participant_textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/fragment_subText_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/add_participant_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inter_margin_horizontal"
                android:contentDescription="@string/add_participant_btn_desc"
                app:backgroundTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="@id/add_participant_textInputLayout"
                app:layout_constraintEnd_toEndOf="@id/name_textInputLayout"
                app:layout_constraintTop_toTopOf="@id/add_participant_textInputLayout"
                app:srcCompat="@drawable/ic_baseline_add_24"
                app:tint="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/show_participant_recyclerView"
                android:layout_width="0dp"
                android:layout_height="@dimen/participant_recyclerView_height"
                android:layout_marginTop="@dimen/inter_margin_vertical"
                app:layout_constraintEnd_toEndOf="@id/add_participant_textInputLayout"
                app:layout_constraintStart_toStartOf="@id/name_textInputLayout"
                app:layout_constraintTop_toBottomOf="@id/add_participant_textInputLayout"
                tools:listitem="@layout/fragment_participant" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_meeting_btn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/create_margin_top"
                android:enabled="true"
                android:padding="12dp"
                android:text="@string/create_meeting"
                android:textColor="@color/white"
                android:textSize="@dimen/fragment_subText_size"
                app:cornerRadius="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/show_participant_recyclerView"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>