<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ListMeetingActivity"
    android:id="@+id/list_meeting_constraintLayout"
    android:background="@color/white">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/show_meetings_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/fragment_meeting"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_meeting_btn"
        app:backgroundTint="@color/app_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        app:tint="@color/white"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/new_meeting_btn_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>