<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/filter_by_date"
        android:title="@string/filter_date"
        app:showAsAction="never" />
    <item android:id="@+id/filter_by_room"
        android:title="@string/filter_room"
        app:showAsAction="never" />
    <item android:id="@+id/reset_filter"
        android:title="@string/remove_filter"
        app:showAsAction="never" />


</menu>