...
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/meeting_icon_imageView"
        app:layout_constraintTop_toTopOf="@+id/meeting_icon_imageView"
        app:layout_constraintStart_toEndOf="@id/meeting_icon_imageView"
        app:layout_constraintEnd_toStartOf="@id/delete_meeting_btn"
        android:layout_marginHorizontal="12dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/meeting_firstLine_textView"
            android:layout_width="match_parent"
...
